CM-922: Remove mui components (#1291)
* CM-922: Remove mui link component

* CM-923: Remove mui breadcrumbs component

* CM-949: Remove mui icons

* CM-925: Remove mui container, grid, box, card component

* CM-924: Remove mui text field, input field, checkbox component

* CM-926: Remove mui misc components

* NOBUG: Code clean up

--- a/src/gatsby/package.json
+++ b/src/gatsby/package.json
@@ -11,13 +11,12 @@
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@loadable/babel-plugin": "^5.16.1",
     "@loadable/component": "^5.16.3",
     "@loadable/webpack-plugin": "^5.15.2",
-    "@mui/icons-material": "^5.15.14",
-    "@mui/material": "^5.15.14",
     "axios": "^0.22.0",
     "bootstrap": "~4.3.1",
     "cheerio": "^1.0.0-rc.12",
