--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -8,9 +8,9 @@ on:
         required: true
 
 env:
-  TOOLS_NAMESPACE: ${{ secrets.OPENSHIFT_LICENSE_PLATE }}-tools
+  TOOLS_NAMESPACE: ${{ secrets.OPENSHIFT_GOLD_LICENSE_PLATE }}-tools
   ENVIRONMENT: prod
-  NAMESPACE: ${{ secrets.OPENSHIFT_LICENSE_PLATE }}-prod
+  NAMESPACE: ${{ secrets.OPENSHIFT_GOLD_LICENSE_PLATE }}-prod
 
 jobs:
   deploy:
@@ -33,8 +33,8 @@ jobs:
       - name: Login OpenShift
         uses: redhat-actions/oc-login@v1
         with:
-          openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL }}
-          openshift_token: ${{ secrets.OPENSHIFT_SERVICE_TOKEN }}
+          openshift_server_url: ${{ secrets.OPENSHIFT_GOLD_SERVER_URL }}
+          openshift_token: ${{ secrets.OPENSHIFT_GOLD_SERVICE_TOKEN }}
 
       - name: Tag Prod images
         run: |
