--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "@playwright/test": "^1.47.1",
     "@types/node": "^20.14.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
